--- a/index.html
+++ b/index.html
@@ -2,13 +2,339 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>مشروعي</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f0f0f0;
+      padding: 20px;
+    }
+    h1 {
+      color: #2c3e50;
+    }
+  </style>
 </head>
 <body>
   <h1>مرحباً بك في مشروعي!</h1>
   <p id="output">جارٍ تنفيذ كود JavaScript...</p>
 
-  <!-- ربط ملف JavaScript -->
-  <script src="asemabuzaid.js"></script>
+  <!-- JavaScript داخلي -->
+  <script>
+    import React, { useState } from 'react';
+import { Calculator, User, Mail, Phone, MapPin, Github, Linkedin, Twitter, Facebook } from 'lucide-react';
+
+export default function App() {
+  const [display, setDisplay] = useState('0');
+  const [previousValue, setPreviousValue] = useState(null);
+  const [operation, setOperation] = useState(null);
+  const [waitingForOperand, setWaitingForOperand] = useState(false);
+
+  const inputNumber = (num) => {
+    if (waitingForOperand) {
+      setDisplay(String(num));
+      setWaitingForOperand(false);
+    } else {
+      setDisplay(display === '0' ? String(num) : display + num);
+    }
+  };
+
+  const inputDecimal = () => {
+    if (waitingForOperand) {
+      setDisplay('0.');
+      setWaitingForOperand(false);
+    } else if (display.indexOf('.') === -1) {
+      setDisplay(display + '.');
+    }
+  };
+
+  const clear = () => {
+    setDisplay('0');
+    setPreviousValue(null);
+    setOperation(null);
+    setWaitingForOperand(false);
+  };
+
+  const performOperation = (nextOperation) => {
+    const inputValue = parseFloat(display);
+
+    if (previousValue === null) {
+      setPreviousValue(inputValue);
+    } else if (operation) {
+      const currentValue = previousValue || 0;
+      const newValue = calculate(currentValue, inputValue, operation);
+
+      setDisplay(String(newValue));
+      setPreviousValue(newValue);
+    }
+
+    setWaitingForOperand(true);
+    setOperation(nextOperation);
+  };
+
+  const calculate = (firstValue, secondValue, operation) => {
+    switch (operation) {
+      case '+':
+        return firstValue + secondValue;
+      case '-':
+        return firstValue - secondValue;
+      case '×':
+        return firstValue * secondValue;
+      case '÷':
+        return secondValue !== 0 ? firstValue / secondValue : 0;
+      default:
+        return secondValue;
+    }
+  };
+
+  const handleEquals = () => {
+    const inputValue = parseFloat(display);
+
+    if (previousValue !== null && operation) {
+      const newValue = calculate(previousValue, inputValue, operation);
+      setDisplay(String(newValue));
+      setPreviousValue(null);
+      setOperation(null);
+      setWaitingForOperand(true);
+    }
+  };
+
+  const Button = ({ onClick, className = '', children, ...props }) => (
+    <button
+      onClick={onClick}
+      className={`h-16 rounded-xl font-semibold text-lg transition-all duration-200 hover:scale-105 active:scale-95 shadow-lg ${className}`}
+      {...props}
+    >
+      {children}
+    </button>
+  );
+
+  return (
+    <div className="min-h-screen bg-gradient-to-br from-slate-900 via-purple-900 to-slate-900">
+      {/* Header */}
+      <header className="container mx-auto px-6 py-8">
+        <div className="text-center">
+          <h1 className="text-5xl md:text-7xl font-bold bg-gradient-to-r from-cyan-400 via-purple-400 to-pink-400 bg-clip-text text-transparent mb-4">
+            Asem Ali Deeb Abuzaid
+          </h1>
+          <p className="text-xl text-gray-300 max-w-2xl mx-auto">
+            Full Stack Developer & Creative Technologist
+          </p>
+        </div>
+      </header>
+
+      <div className="container mx-auto px-6 pb-12">
+        <div className="grid lg:grid-cols-2 gap-12 items-start">
+          {/* Professional Info */}
+          <div className="space-y-8">
+            <div className="bg-white/10 backdrop-blur-lg rounded-3xl p-8 border border-white/20">
+              <div className="flex items-center gap-4 mb-6">
+                <div className="bg-gradient-to-r from-cyan-500 to-purple-500 p-3 rounded-2xl">
+                  <User className="w-8 h-8 text-white" />
+                </div>
+                <h2 className="text-3xl font-bold text-white">About Me</h2>
+              </div>
+              
+              <div className="space-y-4 text-gray-300">
+                <div className="flex items-center gap-3">
+                  <Mail className="w-5 h-5 text-cyan-400" />
+                  <span>asemaliabuzaid@gmail.com</span>
+                </div>
+                <div className="flex items-center gap-3">
+                  <Phone className="w-5 h-5 text-purple-400" />
+                  <span>+96277 9 35 25 15</span>
+                </div>
+                <div className="flex items-center gap-3">
+                  <MapPin className="w-5 h-5 text-pink-400" />
+                  <span>Jordan , Amman</span>
+                </div>
+              </div>
+
+              <div className="mt-8 pt-6 border-t border-white/20">
+                <h3 className="text-xl font-semibold text-white mb-4">Connect With Me</h3>
+                <div className="flex gap-4">
+                  <a href="#" className="p-3 bg-white/10 rounded-xl hover:bg-white/20 transition-colors">
+                    <Github className="w-6 h-6 text-white" />
+                  </a>
+                  <a href="https://www.linkedin.com/in/asem-abu-zaid-02a82b360/" className="p-3 bg-white/10 rounded-xl hover:bg-white/20 transition-colors">
+                    <Linkedin className="w-6 h-6 text-white" />
+                  </a>
+                  <a href="#" className="p-3 bg-white/10 rounded-xl hover:bg-white/20 transition-colors">
+                    <Twitter className="w-6 h-6 text-white" />
+                  </a>
+                  <a href="https://web.facebook.com/assemshab/" className="p-3 bg-white/10 rounded-xl hover:bg-white/20 transition-colors">
+                    <Facebook className="w-6 h-6 text-white" />
+                  </a>
+                </div>
+              </div>
+            </div>
+
+            <div className="bg-gradient-to-r from-cyan-600/20 to-purple-600/20 backdrop-blur-lg rounded-3xl p-8 border border-cyan-500/30">
+              <h3 className="text-2xl font-bold text-white mb-4">Professional Skills</h3>
+              <div className="grid grid-cols-2 gap-4">
+                <div className="bg-white/10 rounded-xl p-4 text-center">
+                  <div className="text-cyan-400 font-bold">Web Development</div>
+                </div>
+                <div className="bg-white/10 rounded-xl p-4 text-center">
+                  <div className="text-purple-400 font-bold">UI/UX Design</div>
+                </div>
+                <div className="bg-white/10 rounded-xl p-4 text-center">
+                  <div className="text-pink-400 font-bold">Problem Solving</div>
+                </div>
+                <div className="bg-white/10 rounded-xl p-4 text-center">
+                  <div className="text-cyan-400 font-bold">Team Leadership</div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          {/* Professional Calculator */}
+          <div className="bg-white/10 backdrop-blur-lg rounded-3xl p-8 border border-white/20">
+            <div className="flex items-center gap-4 mb-8">
+              <div className="bg-gradient-to-r from-orange-500 to-red-500 p-3 rounded-2xl">
+                <Calculator className="w-8 h-8 text-white" />
+              </div>
+              <h2 className="text-3xl font-bold text-white">Professional Calculator</h2>
+            </div>
+
+            {/* Calculator Display */}
+            <div className="bg-gray-900/50 rounded-2xl p-6 mb-6 border border-gray-700/50">
+              <div className="text-right">
+                <div className="text-gray-400 text-sm h-6">
+                  {previousValue !== null && operation ? `${previousValue} ${operation}` : ''}
+                </div>
+                <div className="text-white text-4xl font-mono font-bold truncate">
+                  {display}
+                </div>
+              </div>
+            </div>
+
+            {/* Calculator Buttons */}
+            <div className="grid grid-cols-4 gap-4">
+              {/* Row 1 */}
+              <Button 
+                onClick={clear} 
+                className="bg-red-500 hover:bg-red-600 text-white col-span-2"
+              >
+                Clear
+              </Button>
+              <Button 
+                onClick={() => performOperation('÷')} 
+                className="bg-amber-500 hover:bg-amber-600 text-white"
+              >
+                ÷
+              </Button>
+              <Button 
+                onClick={() => performOperation('×')} 
+                className="bg-amber-500 hover:bg-amber-600 text-white"
+              >
+                ×
+              </Button>
+
+              {/* Row 2 */}
+              <Button 
+                onClick={() => inputNumber(7)} 
+                className="bg-gray-700 hover:bg-gray-600 text-white"
+              >
+                7
+              </Button>
+              <Button 
+                onClick={() => inputNumber(8)} 
+                className="bg-gray-700 hover:bg-gray-600 text-white"
+              >
+                8
+              </Button>
+              <Button 
+                onClick={() => inputNumber(9)} 
+                className="bg-gray-700 hover:bg-gray-600 text-white"
+              >
+                9
+              </Button>
+              <Button 
+                onClick={() => performOperation('-')} 
+                className="bg-amber-500 hover:bg-amber-600 text-white"
+              >
+                −
+              </Button>
+
+              {/* Row 3 */}
+              <Button 
+                onClick={() => inputNumber(4)} 
+                className="bg-gray-700 hover:bg-gray-600 text-white"
+              >
+                4
+              </Button>
+              <Button 
+                onClick={() => inputNumber(5)} 
+                className="bg-gray-700 hover:bg-gray-600 text-white"
+              >
+                5
+              </Button>
+              <Button 
+                onClick={() => inputNumber(6)} 
+                className="bg-gray-700 hover:bg-gray-600 text-white"
+              >
+                6
+              </Button>
+              <Button 
+                onClick={() => performOperation('+')} 
+                className="bg-amber-500 hover:bg-amber-600 text-white"
+              >
+                +
+              </Button>
+
+              {/* Row 4 */}
+              <Button 
+                onClick={() => inputNumber(1)} 
+                className="bg-gray-700 hover:bg-gray-600 text-white"
+              >
+                1
+              </Button>
+              <Button 
+                onClick={() => inputNumber(2)} 
+                className="bg-gray-700 hover:bg-gray-600 text-white"
+              >
+                2
+              </Button>
+              <Button 
+                onClick={() => inputNumber(3)} 
+                className="bg-gray-700 hover:bg-gray-600 text-white"
+              >
+                3
+              </Button>
+              <Button 
+                onClick={handleEquals} 
+                className="bg-green-500 hover:bg-green-600 text-white row-span-2"
+              >
+                =
+              </Button>
+
+              {/* Row 5 */}
+              <Button 
+                onClick={() => inputNumber(0)} 
+                className="bg-gray-700 hover:bg-gray-600 text-white col-span-2"
+              >
+                0
+              </Button>
+              <Button 
+                onClick={inputDecimal} 
+                className="bg-gray-700 hover:bg-gray-600 text-white"
+              >
+                .
+              </Button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      {/* Footer */}
+      <footer className="border-t border-white/20 py-8 text-center text-gray-400">
+        <p>© 2025 Asem Ali Deeb Abuzaid. All rights reserved.</p>
+      </footer>
+    </div>
+  );
+}
+
+  </script>
 </body>
 </html>
