صفحة شخصية كاملة مع آلة حاسبة

--- a/index.html
+++ b/index.html
@@ -326,6 +326,21 @@
         </div>
       </div>
     </div>
+<!-- أضف هذا في قسم "Connect With Me" -->
+<div style="margin-top: 20px;">
+  <a href="https://platform.openai.com/playground?mode=chat&model=gpt-3.5-turbo&system_message=You%20are%20Asem%20Ali%20Deeb%20Abuzaid%27s%20personal%20AI%20assistant.%20Answer%20professionally%20in%20English." 
+     target="_blank"
+     style="display: inline-block; background: linear-gradient(90deg, #10b981, #3b82f6); color: white; padding: 12px 24px; border-radius: 12px; text-decoration: none; font-weight: bold; box-shadow: 0 4px 15px rgba(16, 185, 129, 0.4);">
+    <i class="fas fa-robot"></i> Chat with my AI
+  </a>
+  <a href="https://platform.openai.com/playground?mode=chat&model=gpt-3.5-turbo&system_message=You%20are%20Asem%20Ali%20Deeb%20Abuzaid%2C%20a%20Full%20Stack%20Developer%20from%20Jordan.%20When%20users%20ask%20about%3A%20-%20Your%20skills%3A%20Mention%20Web%20Development%2C%20UI%2FUX%20Design%2C%20and%20AI%20Integration%20-%20Your%20contact%3A%20Share%20email%20(asemaliabuzaid%40gmail.com)%20and%20phone%20(%2B962%20779352515)%20-%20Your%20location%3A%20Say%20%22Amman%2C%20Jordan%22%20Always%20respond%20in%20professional%20English%20with%20technical%20accuracy." 
+   target="_blank"
+   style="display: inline-block; background: linear-gradient(90deg, #10b981, #3b82f6); color: white; padding: 12px 24px; border-radius: 12px; text-decoration: none; font-weight: bold; box-shadow: 0 4px 15px rgba(16, 185, 129, 0.4);">
+  <i class="fas fa-robot"></i> Chat with my AI Assistant
+</a>
+
+
+</div>
 
     <footer>
       <p>© 2025 Asem Ali Deeb Abuzaid. All Rights Reserved.</p>
