--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
   <title>Asem Ali Deeb Abuzaid - AI Developer</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
+    .video-container {
+      max-width: 800px;
+      margin: 30px auto;
+      border-radius: 16px;
+      overflow: hidden;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+    }
+    video {
+      width: 100%;
+      display: block;
+    }
     * {
       margin: 0;
       padding: 0;
@@ -341,6 +352,20 @@
 
 
 </div>
+
+
+
+<div style="position: relative; width: 100%; height: 0; padding-bottom: 56.25%;">
+  <iframe 
+    style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+    src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
+    frameborder="0" 
+    allowfullscreen>
+  </iframe>
+</div>
+
+   <iframe src="https://drive.google.com/file/d/1q9eYA2MnbW3Tia361aya_quT5nZY-WTV/view?usp=sharing" width="640" height="480"></iframe>
+   
 
     <footer>
       <p>© 2025 Asem Ali Deeb Abuzaid. All Rights Reserved.</p>
