--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 <div style="position: relative; width: 100%; height: 0; padding-bottom: 56.25%;">
   <iframe 
     style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
-    src="https://www.youtube.com/watch?v=X0dXd5mVUug&list=RDX0dXd5mVUug&start_radio=1" 
+    src="https://www.youtube.com/embed/X0dXd5mVUug" 
     frameborder="0" 
     allowfullscreen>
   </iframe>
