--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Asem Ali Deeb Abuzaid - AI Developer</title>
+  <title>Asem Abuzaid - AI Developer</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
     .video-container {
@@ -245,7 +245,7 @@
   
   <div class="container">
     <header>
-      <h1>Asem Ali Deeb Abuzaid</h1>
+      <h1>Asem Abuzaid</h1>
       <p class="subtitle">Full Stack Developer | AI Enthusiast | Problem Solver</p>
     </header>
 
