صفحة شخصية كاملة مع آلة حاسبة

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
   <div class="container">
     <header>
       <h1>Asem Abuzaid</h1>
-      <p class="subtitle">Full Stack Developer | AI Enthusiast | Problem Solver</p>
+      <p class="subtitle">Full Stack Developer</p>
     </header>
 
     <div class="content">
@@ -306,7 +306,7 @@
 
         <h3 class="card-title" style="margin-top:28px;font-size:1.5rem;">Connect With Me</h3>
         <div class="social-links" style="display:flex;gap:18px;margin-top:28px;">
-          <a href="https://github.com" class="social-link" target="_blank" style="display:flex;align-items:center;justify-content:center;width:50px;height:50px;background:rgba(255,255,255,0.1);border-radius:50%;text-decoration:none;color:white;font-size:20px;border:1px solid rgba(255,255,255,0.15);">
+          <a href="https://github.com/asemmali5433-glitch" class="social-link" target="_blank" style="display:flex;align-items:center;justify-content:center;width:50px;height:50px;background:rgba(255,255,255,0.1);border-radius:50%;text-decoration:none;color:white;font-size:20px;border:1px solid rgba(255,255,255,0.15);">
             <i class="fab fa-github"></i>
           </a>
           <a href="https://www.linkedin.com/in/asem-abu-zaid-02a82b360/" class="social-link" target="_blank" style="display:flex;align-items:center;justify-content:center;width:50px;height:50px;background:rgba(255,255,255,0.1);border-radius:50%;text-decoration:none;color:white;font-size:20px;border:1px solid rgba(255,255,255,0.15);">
@@ -320,7 +320,7 @@
 
       <!-- AI Chat Card -->
       <div class="ai-card">
-        <h2 class="card-title">AI Assistant</h2>
+        <h2 class="card-title">ذكاء اصطناعي من سوق الجمعة</h2>
         <div class="chat-container" id="chatContainer">
           <div class="message ai-message">Hello! I'm your AI assistant. Ask me about programming, math, or web development!</div>
         </div>
@@ -330,7 +330,7 @@
         </div>
       </div>
 
-      <!-- Calculator Card -->
+      <!-- Calculator Card 
       <div class="calc-card">
         <h2 class="card-title">Smart Calculator</h2>
         <div class="calculator">
@@ -361,7 +361,7 @@
         </div>
       </div>
     </div>
-
+-->
     <!-- Contact Form Card -->
     <div class="contact-card">
       <h2 class="card-title">Contact Me</h2>
