صفحة شخصية كاملة مع آلة حاسبة

--- a/index.html
+++ b/index.html
@@ -300,8 +300,8 @@
         <div class="skills" style="display:grid;grid-template-columns:repeat(2,1fr);gap:14px;margin-top:24px;">
           <div class="skill" style="background:rgba(0,219,222,0.12);padding:12px;border-radius:12px;text-align:center;color:#00dbde;font-weight:600;">Web Development</div>
           <div class="skill" style="background:rgba(0,219,222,0.12);padding:12px;border-radius:12px;text-align:center;color:#00dbde;font-weight:600;">UI/UX Design</div>
-          <div class="skill" style="background:rgba(0,219,222,0.12);padding:12px;border-radius:12px;text-align:center;color:#00dbde;font-weight:600;">AI Integration</div>
-          <div class="skill" style="background:rgba(0,219,222,0.12);padding:12px;border-radius:12px;text-align:center;color:#00dbde;font-weight:600;">Team Leadership</div>
+          <div class="skill" style="background:rgba(0,219,222,0.12);padding:12px;border-radius:12px;text-align:center;color:#00dbde;font-weight:600;">MySQL</div>
+          <div class="skill" style="background:rgba(0,219,222,0.12);padding:12px;border-radius:12px;text-align:center;color:#00dbde;font-weight:600;">OOP</div>
         </div>
 
         <h3 class="card-title" style="margin-top:28px;font-size:1.5rem;">Connect With Me</h3>
