صفحة شخصية كاملة مع آلة حاسبة

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
         </div>
       </div>
 
-      <!-- Calculator Card 
+      Calculator Card 
       <div class="calc-card">
         <h2 class="card-title">Smart Calculator</h2>
         <div class="calculator">
@@ -361,7 +361,7 @@
         </div>
       </div>
     </div>
--->
+
     <!-- Contact Form Card -->
     <div class="contact-card">
       <h2 class="card-title">Contact Me</h2>
