صفحة شخصية كاملة مع آلة حاسبة

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
           <button onclick="sendMessage()"><i class="fas fa-paper-plane"></i></button>
         </div>
       </div>
-
+<!--
       Calculator Card 
       <div class="calc-card">
         <h2 class="card-title">Smart Calculator</h2>
@@ -361,7 +361,7 @@
         </div>
       </div>
     </div>
-
+-->
     <!-- Contact Form Card -->
     <div class="contact-card">
       <h2 class="card-title">Contact Me</h2>
@@ -481,10 +481,10 @@
     }
 
     // === CALCULATOR ===
-    let displayValue = '0';
-    let firstOperand = null;
-    let operator = null;
-    let waiting = false;
+   /* let displayValue = '0';
+   let firstOperand = null;
+   let operator = null;
+   let waiting = false;
 
     function updateDisplay() {
       document.getElementById('display').textContent = displayValue.length > 12 
@@ -558,7 +558,7 @@
       operator = null;
       waiting = false;
       updateDisplay();
-    }
+    } */
 
     // === EMAILJS SEND FUNCTION ===
     (function() {
