صفحة شخصية كاملة مع آلة حاسبة

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
         </div>
       </div>
 <!--
-      Calculator Card 
+      ## Calculator Card
       <div class="calc-card">
         <h2 class="card-title">Smart Calculator</h2>
         <div class="calculator">
@@ -395,7 +395,7 @@
     </div>
 
     <footer>
-      <p>© 2025 Asem Ali Deeb Abuzaid. All Rights Reserved.</p>
+      <p>© 2026 Asem Ali Deeb Abuzaid. All Rights Reserved.</p>
     </footer>
   </div>
 
