--- a/index.html
+++ b/index.html
@@ -312,8 +312,23 @@
           <a href="https://www.linkedin.com/in/asem-abu-zaid-02a82b360/" class="social-link" target="_blank" style="display:flex;align-items:center;justify-content:center;width:50px;height:50px;background:rgba(255,255,255,0.1);border-radius:50%;text-decoration:none;color:white;font-size:20px;border:1px solid rgba(255,255,255,0.15);">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="https://web.facebook.com/assemshab/" class="social-link" target="_blank" style="display:flex;align-items:center;justify-content:center;width:50px;height:50px;background:rgba(255,255,255,0.1);border-radius:50%;text-decoration:none;color:white;font-size:20px;border:1px solid rgba(255,255,255,0.15);">
-            <i class="fab fa-facebook-f"></i>
+         <a href="mailto:amabuzd@gmail.com" 
+   style="display:flex;
+          align-items:center;
+          justify-content:center;
+          width:50px;
+          height:50px;
+          background:#D44638;
+          border-radius:50%;
+          text-decoration:none;
+          color:white;
+          font-size:20px;
+          border:1px solid rgba(255,255,255,0.15);
+          transition:0.3s;">
+          <i class="fas fa-envelope"></i>
+   
+</a>
+
           </a>
         </div>
       </div>
