صفحة شخصية كاملة مع آلة حاسبة

--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
     </div>
 
     <footer>
-      <p>© 2026 Asem Ali Deeb Abuzaid. All Rights Reserved.</p>
+      <p>© كيفك يا يوسف 2026 Asem Ali Deeb Abuzaid. All Rights Reserved.</p>
     </footer>
   </div>
 
